// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should matchsnapshot when 1 expense is showing 1`] = `
<div>
  <p>
    Currently showing 
    1
     
    expense
     totalling 
    $ 95.00
  </p>
</div>
`;

exports[`should matchsnapshot when 2 expenses are showing 1`] = `
<div>
  <p>
    Currently showing 
    2
     
    expenses
     totalling 
    $ 753.33
  </p>
</div>
`;
